--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JDK1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="homeworkRes"/>
+	<classpathentry kind="lib" path="/JDBCTest/ojdbc6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
